end partners and brand section

--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
       <!-- end popup section  -->
 
       <!-- start best deal section  -->
-       <section class="pf__bdeal-area mb-200 section-padding-py ">
+       <section class="pf__bdeal-area  section-padding-py ">
         <div class="pf__bdeal-wrapper">
           <div class="container">
             <div class="pf__bdeal-content">
@@ -1423,6 +1423,302 @@
         </div>
        </section>
       <!-- start best deal section  -->
+
+        <!-- start partners brand  section  -->
+      <section class="pf__brand-area bg-hero-color-50 section-padding-py mb-200">
+        <div class="container-fluid">
+          <div class="pf__brand-wrapper">
+             <!-- start section title  -->
+             <div class="pf__section-title text-center mb-5 ">
+              <p>Partners</p>
+            <h1>We're trusted by 240+ IT <br>
+              firms & departments across the globe </h1>
+            </div>
+            <!-- end section title  -->
+            <!-- bran-1 -->
+      <div class="tp-brand-area ">
+        <div class="tp-brand-wrapper">
+          <!-- Swiper -->
+          <div dir="rtl" class="swiper tp-brand-top-active">
+            <div class="swiper-wrapper tp-slide-transition">
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-1.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-1 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-2.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-2 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-3.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-3 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-4.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-4 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-5.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-5 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-6.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-6 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-7.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-7 -->
+
+              <!-- extra  -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-1.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-3.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-4.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-5.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-3.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-2.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-1-img-1.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+            </div>
+          </div>
+
+          <!-- Swiper JS -->
+        </div>
+      </div>
+      <!-- bran-2  -->
+      <div class="tp-brand-area  pt-25 mt-20">
+        <div class="tp-brand-wrapper">
+          <!-- Swiper -->
+          <div class="swiper tp-brand-bottom-active">
+            <div class="swiper-wrapper tp-slide-transition">
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-1.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-1 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-2.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-2 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-3.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-3 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-4.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-4 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-5.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-5 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-6.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-6 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-7.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-7 -->
+
+              <!-- extra  -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-1.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-3.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-4.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-5.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-3.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-2.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+              <div class="swiper-slide tp-brand-slide-element">
+                <div class="tp-brand-img">
+                  <img
+                    src="./assets/img/brand/home-1-brand-2-img-1.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- item-8 -->
+            </div>
+          </div>
+
+          <!-- Swiper JS -->
+        </div>
+      </div>
+          </div>
+        </div>
+      </section>
+      <!-- end pertners brand section  -->
 
     </main>
 
