--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
       <!-- start best deal section  -->
 
         <!-- start partners brand  section  -->
-      <section class="pf__brand-area bg-hero-color-50 section-padding-py mb-200">
+      <section class="pf__brand-area bg-hero-color-50 section-padding-py ">
         <div class="container-fluid">
           <div class="pf__brand-wrapper">
              <!-- start section title  -->
@@ -1719,6 +1719,102 @@
         </div>
       </section>
       <!-- end pertners brand section  -->
+
+      <!-- start testimonials section  -->
+       <section class="pf__tes-area section-padding-py">
+        <div class="container">
+          <div class="pf__tes-content">
+            <!-- start section title  -->
+            <div class="pf__section-title text-center mb-5 ">
+              <p>Our Testimonial</p>
+            <h1>Our Client's Feedback </h1>
+            </div>
+            <!-- end section title  -->
+                  <!-- Swiper -->
+        <div class="swiper pf__tes-slider px-4 p-relative">
+          <div class="swiper-wrapper py-5">
+
+            <div class="swiper-slide rounded-3  p-4">
+              <div class="pf__tes-slide d-flex gap-4">
+                <div class="pf__slide-img">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-tes-img-1-icon.png" alt="">
+                  </span>
+                </div>
+                <div class="pf__tes-slide-text">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                  </span>
+                  <p>Lorem Ipsum available, but the majority have suffered alteration in some form by injected humour or randomised words which don't look even slightly believableeven slightly believable if you are going.</p>
+                  <h4 class="mt-2 mb-0">Glean Philips</h4>
+                  <p>Product Manager</p>
+                </div>
+              </div>
+            </div>
+            <!-- items -->
+            <div class="swiper-slide rounded-3  p-4">
+              <div class="pf__tes-slide d-flex gap-4">
+                <div class="pf__slide-img">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-tes-img-2-icon.png" alt="">
+                  </span>
+                </div>
+                <div class="pf__tes-slide-text">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                  </span>
+                  <p>Lorem Ipsum available, but the majority have suffered alteration in some form by injected humour or randomised words which don't look even slightly believableeven slightly believable if you are going.</p>
+                  <h4 class="mt-2 mb-0">Glean Philips</h4>
+                  <p>Product Manager</p>
+                </div>
+              </div>
+            </div>
+            <!-- items -->
+            <div class="swiper-slide rounded-3  p-4">
+              <div class="pf__tes-slide d-flex gap-4">
+                <div class="pf__slide-img">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-tes-img-1-icon.png" alt="">
+                  </span>
+                </div>
+                <div class="pf__tes-slide-text">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                    <img src="./assets/img/icon/home-1/pf-test-star-icon.png" alt="">
+                  </span>
+                  <p>Lorem Ipsum available, but the majority have suffered alteration in some form by injected humour or randomised words which don't look even slightly believableeven slightly believable if you are going.</p>
+                  <h4 class="mt-2 mb-0">Glean Philips</h4>
+                  <p>Product Manager</p>
+                </div>
+              </div>
+            </div>
+            <!-- items -->
+            
+          </div>
+          <div class="pf__tes-next-btn p-absolute"> <i class="far fa-angle-right"></i></div>
+          <div class="pf__tes-prev-btn p-absolute"><i class="far fa-angle-left"></i></div>
+        </div>
+
+        <!-- Swiper JS -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+        <!-- Initialize Swiper -->
+          </div>
+        </div>
+       </section>
+      <!-- end testimonials section  -->
+
 
     </main>
 
