--- a/index.html
+++ b/index.html
@@ -1815,6 +1815,155 @@
        </section>
       <!-- end testimonials section  -->
 
+      <!-- start blog section  -->
+       <section class="pf__blog-area mb-200 section-space-pb">
+        <div class="container">
+          <div class="pf__blog-wrapper ">
+             <!-- start section title  -->
+             <div class="pf__section-title mb-4 d-flex align-content-end justify-content-between">
+              <div>
+                <p>Blog Post</p>
+            <h1>Read Latest News & Blog</h1>
+              </div>
+            <div class="pf__blog-slider-btn d-flex gap-3 align-items-center ">
+              <div class="pf__blog-next-btn border rounded-3"><i class="far fs-3 fa-angle-left"></i></div>
+            <div class="pf__blog-prev-btn border rounded-3"><i class="far fs-3 fa-angle-right"></i></div>
+            </div>
+            </div>
+            <!-- end section title  -->
+             <!-- Swiper -->
+        <div class="swiper pf__blog-slider ">
+          <div class="swiper-wrapper pb-5 ">
+            <div class="swiper-slide rounded-3 fix">
+              <div class="pf__blog-card ">
+                <div class="pf__blog-card-img fix ">
+                  <img class="blog-hover-img" src="./assets/img/blog/home-1-blog-img-3.jpg" alt="">
+                </div>
+                <div class="pf__blog-card-text px-4  pb-4 ">
+                  <div class="pf__blog-card-header d-flex align-content-end gap-4">
+                    <div class="pf__blog-card-date rounded-2 ">
+                      <h4>12</h4>
+                      <p>sep</p>
+                    </div>
+                      <div class="d-flex align-items-center gap-4 mt-2">
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-user-icon.png" alt=""></span>
+                           <a href="#">Admin</a>
+                        </div>
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-msg-icon.png" alt=""></span>
+                           <a href="#">2 Comments</a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="pf__blog-card-body">
+                    <h5 class="mt-4"> <a href="#">How Chatbots Can Help YouDrive More Sales.</a></h5>
+                    <button class="d-flex align-items-center gap-2 p-2"> Read more <i class="far fa-arrow-right "></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- items -->
+            <div class="swiper-slide rounded-3 fix">
+              <div class="pf__blog-card ">
+                <div class="pf__blog-card-img fix ">
+                  <img class="blog-hover-img" src="./assets/img/blog/home-1-blog-img-1.jpg" alt="">
+                </div>
+                <div class="pf__blog-card-text px-4  pb-4 ">
+                  <div class="pf__blog-card-header d-flex align-content-end gap-4">
+                    <div class="pf__blog-card-date rounded-2 ">
+                      <h4>12</h4>
+                      <p>sep</p>
+                    </div>
+                      <div class="d-flex align-items-center gap-4 mt-2">
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-user-icon.png" alt=""></span>
+                           <a href="#">Admin</a>
+                        </div>
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-msg-icon.png" alt=""></span>
+                           <a href="#">2 Comments</a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="pf__blog-card-body">
+                    <h5 class="mt-4"> <a href="#">How Chatbots Can Help YouDrive More Sales.</a></h5>
+                    <button class="d-flex align-items-center gap-2 p-2"> Read more <i class="far fa-arrow-right "></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- items -->
+            <div class="swiper-slide rounded-3 fix">
+              <div class="pf__blog-card ">
+                <div class="pf__blog-card-img fix ">
+                  <img class="blog-hover-img" src="./assets/img/blog/home-1-blog-img-2.jpg" alt="">
+                </div>
+                <div class="pf__blog-card-text px-4  pb-4 ">
+                  <div class="pf__blog-card-header d-flex align-content-end gap-4">
+                    <div class="pf__blog-card-date rounded-2 ">
+                      <h4>12</h4>
+                      <p>sep</p>
+                    </div>
+                      <div class="d-flex align-items-center gap-4 mt-2">
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-user-icon.png" alt=""></span>
+                           <a href="#">Admin</a>
+                        </div>
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-msg-icon.png" alt=""></span>
+                           <a href="#">2 Comments</a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="pf__blog-card-body">
+                    <h5 class="mt-4"> <a href="#">How Chatbots Can Help YouDrive More Sales.</a></h5>
+                    <button class="d-flex align-items-center gap-2 p-2"> Read more <i class="far fa-arrow-right "></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- items -->
+            <div class="swiper-slide rounded-3 fix">
+              <div class="pf__blog-card ">
+                <div class="pf__blog-card-img fix ">
+                  <img class="blog-hover-img" src="./assets/img/blog/home-1-blog-img-3.jpg" alt="">
+                </div>
+                <div class="pf__blog-card-text px-4  pb-4 ">
+                  <div class="pf__blog-card-header d-flex align-content-end gap-4">
+                    <div class="pf__blog-card-date rounded-2 ">
+                      <h4>12</h4>
+                      <p>sep</p>
+                    </div>
+                      <div class="d-flex align-items-center gap-4 mt-2">
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-user-icon.png" alt=""></span>
+                           <a href="#">Admin</a>
+                        </div>
+                        <div class="d-flex align-items-center  gap-2">
+                          <span><img src="./assets/img/icon/home-1/blog-card-msg-icon.png" alt=""></span>
+                           <a href="#">2 Comments</a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="pf__blog-card-body">
+                    <h5 class="mt-4"> <a href="#">How Chatbots Can Help YouDrive More Sales.</a></h5>
+                    <button class="d-flex align-items-center gap-2 p-2"> Read more <i class="far fa-arrow-right "></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- items -->
+    
+          </div>
+          
+        </div>
+        <!-- Swiper JS -->
+          </div>
+        </div>
+       </section>
+      <!-- end blog section  -->
+
 
     </main>
 
