end customer section

--- a/index.html
+++ b/index.html
@@ -1725,7 +1725,7 @@
         <div class="container">
           <div class="pf__tes-content">
             <!-- start section title  -->
-            <div class="pf__section-title text-center mb-5 ">
+            <div class="pf__section-title text-center mb-3 ">
               <p>Our Testimonial</p>
             <h1>Our Client's Feedback </h1>
             </div>
@@ -1816,7 +1816,7 @@
       <!-- end testimonials section  -->
 
       <!-- start blog section  -->
-       <section class="pf__blog-area mb-200 section-space-pb">
+       <section class="pf__blog-area section-space-pb-50">
         <div class="container">
           <div class="pf__blog-wrapper ">
              <!-- start section title  -->
@@ -1963,6 +1963,39 @@
         </div>
        </section>
       <!-- end blog section  -->
+
+      <img src="" alt="">
+      <!-- start customer area  -->
+       <section class="pf__customer-area mb-200 bg-customer-color p-relative fix ">
+        <div class="pf__customer-wrapper">
+          <div class="pf__customer-shape">
+            <div class="pf__customer-shape-bottom p-absolute">
+              <img src="./assets/img/shape/pf-customer-bottom-shape.png" alt="">
+            </div>
+            <div class="pf__customer-shape-1 p-absolute">
+              <img src="./assets/img/customer/customer-img-1.png" alt="">
+            </div>
+            <div class="pf__customer-shape-2 p-absolute">
+              <img src="./assets/img/customer/customer-img-2.png" alt="">
+            </div>
+          </div>
+          <div class="container">
+            <div class="pf__customer-content section-padding-py">
+               <!-- start section title  -->
+            <div class="pf__section-title text-center mb-5 ">
+              <p>Printed And Shipped On Demand!</p>
+            <h1 class="my-3">Ready to buy in bulk & save up to 30%?</h1>
+            <span>Aliquet in felis et pharetra id vel feugiat. Erat justo duis mauris feugiat viverra egestas lorem et nibh. Integer nec elementum <br> faucibus lorem convallis enim mattis sit sapien. Semper fermentum enim at est</span>
+            <div>
+              <button class="pf__btn bg-secondary-color mt-4"> Explore More </button>
+            </div>
+            </div>
+            <!-- end section title  -->
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- end customer area  -->
 
 
     </main>
