end footer section

--- a/index.html
+++ b/index.html
@@ -1965,8 +1965,8 @@
       <!-- end blog section  -->
 
       <img src="" alt="">
-      <!-- start customer area  -->
-       <section class="pf__customer-area mb-200 bg-customer-color p-relative fix ">
+      <!-- start customer section  -->
+       <section class="pf__customer-area section-space-mb bg-customer-color p-relative fix ">
         <div class="pf__customer-wrapper">
           <div class="pf__customer-shape">
             <div class="pf__customer-shape-bottom p-absolute">
@@ -1995,13 +1995,229 @@
           </div>
         </div>
        </section>
-      <!-- end customer area  -->
-
+      <!-- end customer section -->
 
     </main>
 
-    <footer>
+    <footer class=" p-relative zi-2 bg-primary-color">
+      <div class="container">
+        <div class="row pt-50 pb-70 rt-footer-br-remove ">
+          <div class="col-sm-6 col-xl-3 mt-5">
+            <div class="rt-footer-col">
+              <span class="mb-34 d-block">
+                <img src="./assets/img/logo/pf-main-logof.png" alt="" />
+              </span>
+              <p class="text-light mb-20">
+                Corporate business typically refers to <br />
+                large-scale mansola it enterprises or <br />
+                large-scale mansola it enterprises  <br />
+                organizat
+              </p>
+              <div
+                class="rt-footer-social-icon d-flex align-items-center "
+              >
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-instagram-square"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-pinterest-p"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- cols -->
+          <div class="col-sm-6 col-xl-3 mt-5">
+            <div class="rt-footer-col rt-footer-responsive-col pl-60">
+              <h4 class="text-light mb-42">Quick Links</h4>
+              <ul class="rt-footer-list">
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-right-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    About Us
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-right-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Shop
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-right-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Terms Of Service
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-right-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Privacy policy
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-right-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Latest Blog
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-right-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Our Services
+                  </a>
+                </li>
 
+              </ul>
+            </div>
+          </div>
+          <!-- cols -->
+          <div class="col-sm-6 col-xl-3 mt-5">
+            <div class="rt-footer-col rt-footer-responsive-col pl-60">
+              <h4 class="text-light mb-42">Our Services</h4>
+              <ul class="rt-footer-list">
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-arrow-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Offset Printing
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-arrow-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Business Card
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-arrow-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Design & Branding
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-arrow-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    3D Design & Printing
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-arrow-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    Mug Printing
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="me-3">
+                      <img
+                        src="./assets/img/icon/home-1/home-1-footer-arrow-icon.png"
+                        alt=""
+                      />
+                    </span>
+                    T-Shirt Printing
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- cols -->
+          <div class="col-sm-6 col-xl-3 mt-5">
+            <div class="rt-footer-col pf__footer-col">
+              <h4 class="text-light mb-42">Contact</h4>
+              <a href="#"> <span>
+                <img src="./assets/img/icon/home-1/pf-footer-location-icon.png" alt="">
+              </span>  <span>500 Treat Ave, Suite 200 San  CA 94110, USA-265</span></a>
+              <a href="#"> <span>
+                <img src="./assets/img/icon/home-1/pf-footer-call-icon.png" alt="">
+              </span>  <span>+025698 259145</span></a>
+              <a href="#"> <span>
+                <img src="./assets/img/icon/home-1/pf-footer-msg-icon.png" alt="">
+              </span>  <span>info.rrdevs@gmail.com</span></a>
+            </div>
+          </div>
+          <!-- cols -->
+        </div>
+      </div>
+      <!-- start copyright  -->
+      <div class="rt-copyright-area p-28">
+        <div class="container">
+          <div
+            class="rt-copyright-content d-flex align-items-center 
+            justify-content-lg-between justify-content-center flex-wrap"
+          >
+            <div class="rt-copyright-left-part mb-3 mb-lg-0 ">
+              <a href="#">
+                © Yoursitename 2024 &nbsp; | &nbsp; All Rights Reserved
+              </a>
+            </div>
+            <div class="rt-copyright-right-part">
+              <a href="#">Trams & Condition</a>
+              <a href="#">Privacy Policy </a>
+              <a href="#">Contact Us</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
 
       <!-- start  mouse cursor and back to top btn  -->
