--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
 
       <img src="" alt="">
       <!-- start customer section  -->
-       <section class="pf__customer-area section-space-mb bg-customer-color p-relative fix ">
+       <section class="pf__customer-area mb-50 bg-customer-color p-relative fix ">
         <div class="pf__customer-wrapper">
           <div class="pf__customer-shape">
             <div class="pf__customer-shape-bottom p-absolute">
@@ -1999,15 +1999,15 @@
 
     </main>
 
-    <footer class=" p-relative zi-2 bg-primary-color">
+    <footer class=" p-relative zi-2 ">
       <div class="container">
         <div class="row pt-50 pb-70 rt-footer-br-remove ">
           <div class="col-sm-6 col-xl-3 mt-5">
             <div class="rt-footer-col">
               <span class="mb-34 d-block">
-                <img src="./assets/img/logo/pf-main-logof.png" alt="" />
+                <img src="./assets/img/logo/pf-main-logo.png" alt="" />
               </span>
-              <p class="text-light mb-20">
+              <p class=" mb-20">
                 Corporate business typically refers to <br />
                 large-scale mansola it enterprises or <br />
                 large-scale mansola it enterprises  <br />
@@ -2034,7 +2034,7 @@
           <!-- cols -->
           <div class="col-sm-6 col-xl-3 mt-5">
             <div class="rt-footer-col rt-footer-responsive-col pl-60">
-              <h4 class="text-light mb-42">Quick Links</h4>
+              <h4 class=" mb-42">Quick Links</h4>
               <ul class="rt-footer-list">
                 <li>
                   <a href="#">
@@ -2109,7 +2109,7 @@
           <!-- cols -->
           <div class="col-sm-6 col-xl-3 mt-5">
             <div class="rt-footer-col rt-footer-responsive-col pl-60">
-              <h4 class="text-light mb-42">Our Services</h4>
+              <h4 class=" mb-42">Our Services</h4>
               <ul class="rt-footer-list">
                 <li>
                   <a href="#">
@@ -2183,7 +2183,7 @@
           <!-- cols -->
           <div class="col-sm-6 col-xl-3 mt-5">
             <div class="rt-footer-col pf__footer-col">
-              <h4 class="text-light mb-42">Contact</h4>
+              <h4 class=" mb-42">Contact</h4>
               <a href="#"> <span>
                 <img src="./assets/img/icon/home-1/pf-footer-location-icon.png" alt="">
               </span>  <span>500 Treat Ave, Suite 200 San  CA 94110, USA-265</span></a>
